--- a/.github/workflows/Workflow.yml
+++ b/.github/workflows/Workflow.yml
@@ -7,18 +7,21 @@ on:
 
 jobs:
   build:
-
+    name: Deploy
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout master
+    - name: Checkout code
       uses: actions/checkout@v1
       with:
         submodules: true
 
     - name: Hugo Deploy GitHub Pages
-      uses: benmatselby/hugo-deploy-gh-pages@master
+      uses: benmatselby/hugo-deploy-gh-pages@main
       env:
         HUGO_VERSION: 0.107.0
         TARGET_REPO: NamNguyen-hub/NamNguyen-hub.github.io
+        TARGET_BRANCH: main
         TOKEN: ${{ secrets.EXAMPLE_TOKEN }}
+        HUGO_ARGS: '-t academic'
+        CNAME: namnguyen-hub.github.io
